@@ -1,11 +1,12 @@
 package im.toduck.domain.social.domain.service;
 
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import im.toduck.domain.social.common.mapper.SocialCategoryMapper;
-import im.toduck.domain.social.persistence.entity.Social;
 import im.toduck.domain.social.persistence.entity.SocialCategoryLink;
 import im.toduck.domain.social.persistence.repository.SocialCategoryLinkRepository;
 import im.toduck.domain.social.presentation.dto.response.SocialCategoryResponse.SocialCategoryDto;
@@ -18,11 +19,21 @@ import lombok.extern.slf4j.Slf4j;
 public class SocialCategoryService {
 	private final SocialCategoryLinkRepository socialCategoryLinkRepository;
 
-	public List<SocialCategoryDto> getSocialCategoryDtosBySocial(final Social social) {
-		List<SocialCategoryLink> socialCategoryLinks = socialCategoryLinkRepository.findAllBySocial(social); // 1. 링크 조회
+	public Map<Long, List<SocialCategoryDto>> getSocialCategoryDtosBySocialIds(final List<Long> socialIds) {
+		if (socialIds == null || socialIds.isEmpty()) {
+			return Map.of();
+		}
+
+		List<SocialCategoryLink> socialCategoryLinks = socialCategoryLinkRepository.findAllBySocialIdInWithCategory(
+			socialIds);
+
 		return socialCategoryLinks.stream()
-			.map(SocialCategoryLink::getSocialCategory)
-			.map(SocialCategoryMapper::toSocialCategoryDto)
-			.toList();
+			.collect(Collectors.groupingBy(
+				link -> link.getSocial().getId(),
+				Collectors.mapping(
+					link -> SocialCategoryMapper.toSocialCategoryDto(link.getSocialCategory()),
+					Collectors.toList()
+				)
+			));
 	}
 }
